--- a/Flair_Detection.ipynb
+++ b/Flair_Detection.ipynb
@@ -1459,7 +1459,9 @@
   {
    "cell_type": "code",
    "execution_count": 60,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -1512,7 +1514,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
@@ -1584,7 +1586,37 @@
       "Epoch 15/30\n",
       "1078/1078 [==============================] - 2s 2ms/step - loss: 0.1674 - accuracy: 0.9703 - val_loss: 3.0203 - val_accuracy: 0.6782\n",
       "Epoch 16/30\n",
-      " 160/1078 [===>..........................] - ETA: 1s - loss: 0.1100 - accuracy: 0.9750"
+      "1078/1078 [==============================] - 2s 2ms/step - loss: 0.1782 - accuracy: 0.9731 - val_loss: 3.2519 - val_accuracy: 0.6825\n",
+      "Epoch 17/30\n",
+      "1078/1078 [==============================] - 2s 2ms/step - loss: 0.1575 - accuracy: 0.9852 - val_loss: 3.2727 - val_accuracy: 0.6782\n",
+      "Epoch 18/30\n",
+      "1078/1078 [==============================] - 2s 2ms/step - loss: 0.1618 - accuracy: 0.9787 - val_loss: 3.1249 - val_accuracy: 0.6825\n",
+      "Epoch 19/30\n",
+      "1078/1078 [==============================] - 2s 1ms/step - loss: 0.1571 - accuracy: 0.9842 - val_loss: 3.4982 - val_accuracy: 0.6371\n",
+      "Epoch 20/30\n",
+      "1078/1078 [==============================] - 2s 2ms/step - loss: 0.1910 - accuracy: 0.9740 - val_loss: 3.9127 - val_accuracy: 0.6328\n",
+      "Epoch 21/30\n",
+      "1078/1078 [==============================] - 2s 2ms/step - loss: 0.1944 - accuracy: 0.9740 - val_loss: 3.9507 - val_accuracy: 0.6220\n",
+      "Epoch 22/30\n",
+      "1078/1078 [==============================] - 2s 2ms/step - loss: 0.2837 - accuracy: 0.9620 - val_loss: 4.4167 - val_accuracy: 0.6004\n",
+      "Epoch 23/30\n",
+      "1078/1078 [==============================] - 2s 2ms/step - loss: 0.2607 - accuracy: 0.9694 - val_loss: 3.6654 - val_accuracy: 0.6652\n",
+      "Epoch 24/30\n",
+      "1078/1078 [==============================] - 2s 2ms/step - loss: 0.1972 - accuracy: 0.9852 - val_loss: 3.5806 - val_accuracy: 0.6825\n",
+      "Epoch 25/30\n",
+      "1078/1078 [==============================] - 2s 2ms/step - loss: 0.1392 - accuracy: 0.9759 - val_loss: 3.6706 - val_accuracy: 0.6587\n",
+      "Epoch 26/30\n",
+      "1078/1078 [==============================] - 1s 1ms/step - loss: 0.2307 - accuracy: 0.9768 - val_loss: 3.3919 - val_accuracy: 0.6739\n",
+      "Epoch 27/30\n",
+      "1078/1078 [==============================] - 2s 1ms/step - loss: 0.1167 - accuracy: 0.9768 - val_loss: 3.3842 - val_accuracy: 0.6674\n",
+      "Epoch 28/30\n",
+      "1078/1078 [==============================] - 2s 1ms/step - loss: 0.1119 - accuracy: 0.9796 - val_loss: 3.2192 - val_accuracy: 0.6782\n",
+      "Epoch 29/30\n",
+      "1078/1078 [==============================] - 2s 1ms/step - loss: 0.0617 - accuracy: 0.9861 - val_loss: 3.3000 - val_accuracy: 0.6695\n",
+      "Epoch 30/30\n",
+      "1078/1078 [==============================] - 2s 1ms/step - loss: 0.1309 - accuracy: 0.9805 - val_loss: 3.2833 - val_accuracy: 0.6652\n",
+      "661/661 [==============================] - 0s 156us/step\n",
+      "Test Accuracy: 0.6732223629951477\n"
      ]
     }
    ],
